# aoc_python_project_creator

./: .gitignore  README.md  aoc_utils.py  file_utils.py  main.py  pyproject.toml  test_pytest.py
aoc_create_day/: aoc_utils.py  file_utils.py  main.py
aoc_create_day/templates/: pyproject.toml  test.sh  test_pytest.py
src/: main.py
templates/: day.py
tests/: test_pytest.py
