[tool.poetry]
name = "aoc-create-day"
version = "0.1.0"
description = ""
authors = ["AppleDannyClegg <jives.gimbals0@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
setuptools = "^68.2.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "aoc_create_day"
